tests/negative/neg_pr1113a_public_sum.safe
package neg_pr1113a_public_sum

   public type shape is circle (radius : integer) or idle;
